Assignment_3/initial/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from d:/AST/assignment3/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'if'", "'else'", "'for'", 
                     "'return'", "'func'", "'type'", "'struct'", "'interface'", 
                     "'string'", "'int'", "'float'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'boolean'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'&&'", "'||'", "'!'", "':='", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'.'", "':'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "COMPARE_OPERATOR", "IF", "ELSE", "FOR", 
                      "RETURN", "FUNC", "TYPE", "STRUCT", "INTERFACE", "STRING", 
                      "INT", "FLOAT", "CONST", "VAR", "CONTINUE", "BREAK", 
                      "RANGE", "NIL", "TRUE", "FALSE", "BOOLEAN", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EQUAL", "NOT_EQUAL", 
                      "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "AND", "OR", "NOT", "ASS_DECLARE", "ASSIGN", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "DOT", "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "COMMA", "SEMICOLON", "ID", 
                      "BOOLEAN_LIT", "INTEGER_LITERAL", "DECIMAL_LITERAL", 
                      "BINARY_LITERAL", "OCTAL_LITERAL", "HEX_LITERAL", 
                      "FLOATING_LITERAL", "STRING_LITERAL", "NIL_LIT", "COMMENT_BLOCK", 
                      "COMMENT_LINE", "WS", "NEWLINE", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_list_declaration = 1
    RULE_declaration = 2
    RULE_list_statement_primary = 3
    RULE_list_statement = 4
    RULE_statement = 5
    RULE_const_declaration = 6
    RULE_var_declaration = 7
    RULE_struct_declaration = 8
    RULE_data_struct = 9
    RULE_method_declaration = 10
    RULE_list_method_element = 11
    RULE_method_element = 12
    RULE_func_declaration = 13
    RULE_list_func_arguments = 14
    RULE_list_agruments = 15
    RULE_func_agrument = 16
    RULE_data_element = 17
    RULE_interface_declaration = 18
    RULE_list_method_interface = 19
    RULE_inter_method = 20
    RULE_list_interface_element = 21
    RULE_inter_param = 22
    RULE_assign_oprator = 23
    RULE_assign_statement = 24
    RULE_assignment_lhs = 25
    RULE_if_statement = 26
    RULE_if_stmt = 27
    RULE_elseif_list = 28
    RULE_block_statement = 29
    RULE_for_statement = 30
    RULE_for_basic = 31
    RULE_for_loop_basic = 32
    RULE_for_loop_range = 33
    RULE_assignment_for = 34
    RULE_var_declaration_for = 35
    RULE_break_statement = 36
    RULE_lhs_aggin = 37
    RULE_call_statement = 38
    RULE_continue_statement = 39
    RULE_return_statement = 40
    RULE_literal = 41
    RULE_data_type = 42
    RULE_array_literal = 43
    RULE_array_type = 44
    RULE_list_type_arr = 45
    RULE_list_array_element = 46
    RULE_array_element = 47
    RULE_array_param = 48
    RULE_struct_literal = 49
    RULE_struct_lit_body = 50
    RULE_struct_lit_body_element = 51
    RULE_struct_element = 52
    RULE_list_expression = 53
    RULE_params = 54
    RULE_expression = 55
    RULE_expression_1 = 56
    RULE_expression_2 = 57
    RULE_expression_3 = 58
    RULE_expression_4 = 59
    RULE_expression_5 = 60
    RULE_expression_6 = 61
    RULE_expression_7 = 62
    RULE_func_call = 63

    ruleNames =  [ "program", "list_declaration", "declaration", "list_statement_primary", 
                   "list_statement", "statement", "const_declaration", "var_declaration", 
                   "struct_declaration", "data_struct", "method_declaration", 
                   "list_method_element", "method_element", "func_declaration", 
                   "list_func_arguments", "list_agruments", "func_agrument", 
                   "data_element", "interface_declaration", "list_method_interface", 
                   "inter_method", "list_interface_element", "inter_param", 
                   "assign_oprator", "assign_statement", "assignment_lhs", 
                   "if_statement", "if_stmt", "elseif_list", "block_statement", 
                   "for_statement", "for_basic", "for_loop_basic", "for_loop_range", 
                   "assignment_for", "var_declaration_for", "break_statement", 
                   "lhs_aggin", "call_statement", "continue_statement", 
                   "return_statement", "literal", "data_type", "array_literal", 
                   "array_type", "list_type_arr", "list_array_element", 
                   "array_element", "array_param", "struct_literal", "struct_lit_body", 
                   "struct_lit_body_element", "struct_element", "list_expression", 
                   "params", "expression", "expression_1", "expression_2", 
                   "expression_3", "expression_4", "expression_5", "expression_6", 
                   "expression_7", "func_call" ]

    EOF = Token.EOF
    COMPARE_OPERATOR=1
    IF=2
    ELSE=3
    FOR=4
    RETURN=5
    FUNC=6
    TYPE=7
    STRUCT=8
    INTERFACE=9
    STRING=10
    INT=11
    FLOAT=12
    CONST=13
    VAR=14
    CONTINUE=15
    BREAK=16
    RANGE=17
    NIL=18
    TRUE=19
    FALSE=20
    BOOLEAN=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    EQUAL=27
    NOT_EQUAL=28
    LESS=29
    LESS_EQUAL=30
    GREATER=31
    GREATER_EQUAL=32
    AND=33
    OR=34
    NOT=35
    ASS_DECLARE=36
    ASSIGN=37
    ADD_ASSIGN=38
    SUB_ASSIGN=39
    MUL_ASSIGN=40
    DIV_ASSIGN=41
    MOD_ASSIGN=42
    DOT=43
    COLON=44
    LPAREN=45
    RPAREN=46
    LBRACE=47
    RBRACE=48
    LBRACKET=49
    RBRACKET=50
    COMMA=51
    SEMICOLON=52
    ID=53
    BOOLEAN_LIT=54
    INTEGER_LITERAL=55
    DECIMAL_LITERAL=56
    BINARY_LITERAL=57
    OCTAL_LITERAL=58
    HEX_LITERAL=59
    FLOATING_LITERAL=60
    STRING_LITERAL=61
    NIL_LIT=62
    COMMENT_BLOCK=63
    COMMENT_LINE=64
    WS=65
    NEWLINE=66
    ERROR_CHAR=67
    UNCLOSE_STRING=68
    ILLEGAL_ESCAPE=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.List_declarationContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.list_declaration()
            self.state = 129
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MiniGoParser.DeclarationContext,0)


        def list_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.List_declarationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_list_declaration




    def list_declaration(self):

        localctx = MiniGoParser.List_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_declaration)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.declaration()
                self.state = 132
                self.list_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declarationContext,0)


        def const_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declarationContext,0)


        def func_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declarationContext,0)


        def struct_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declarationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declaration




    def declaration(self):

        localctx = MiniGoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.var_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.const_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.func_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                self.struct_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                self.interface_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_statement_primaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_statement(self):
            return self.getTypedRuleContext(MiniGoParser.List_statementContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_list_statement_primary




    def list_statement_primary(self):

        localctx = MiniGoParser.List_statement_primaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_list_statement_primary)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 4, 5, 13, 14, 15, 16, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.list_statement()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MiniGoParser.StatementContext,0)


        def list_statement(self):
            return self.getTypedRuleContext(MiniGoParser.List_statementContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_list_statement




    def list_statement(self):

        localctx = MiniGoParser.List_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_statement)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.statement()
                self.state = 149
                self.list_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declarationContext,0)


        def var_declaration(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declarationContext,0)


        def assign_statement(self):
            return self.getTypedRuleContext(MiniGoParser.Assign_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(MiniGoParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MiniGoParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MiniGoParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MiniGoParser.Continue_statementContext,0)


        def func_call(self):
            return self.getTypedRuleContext(MiniGoParser.Func_callContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(MiniGoParser.Call_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MiniGoParser.Return_statementContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_statement




    def statement(self):

        localctx = MiniGoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 154
                self.const_declaration()
                pass

            elif la_ == 2:
                self.state = 155
                self.var_declaration()
                pass

            elif la_ == 3:
                self.state = 156
                self.assign_statement()
                pass

            elif la_ == 4:
                self.state = 157
                self.if_statement()
                pass

            elif la_ == 5:
                self.state = 158
                self.for_statement()
                pass

            elif la_ == 6:
                self.state = 159
                self.break_statement()
                pass

            elif la_ == 7:
                self.state = 160
                self.continue_statement()
                pass

            elif la_ == 8:
                self.state = 161
                self.func_call()
                pass

            elif la_ == 9:
                self.state = 162
                self.call_statement()
                pass

            elif la_ == 10:
                self.state = 163
                self.return_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_const_declaration




    def const_declaration(self):

        localctx = MiniGoParser.Const_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MiniGoParser.CONST)
            self.state = 167
            self.match(MiniGoParser.ID)
            self.state = 168
            self.match(MiniGoParser.ASSIGN)
            self.state = 169
            self.expression(0)
            self.state = 170
            self.match(MiniGoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def data_type(self):
            return self.getTypedRuleContext(MiniGoParser.Data_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_declaration




    def var_declaration(self):

        localctx = MiniGoParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(MiniGoParser.VAR)
            self.state = 173
            self.match(MiniGoParser.ID)
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 12, 21, 49, 53]:
                self.state = 174
                self.data_type()
                self.state = 178
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [37]:
                    self.state = 175
                    self.match(MiniGoParser.ASSIGN)

                    self.state = 176
                    self.expression(0)
                    pass
                elif token in [52]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [37]:
                self.state = 180
                self.match(MiniGoParser.ASSIGN)

                self.state = 181
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 184
            self.match(MiniGoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def STRUCT(self):
            return self.getToken(MiniGoParser.STRUCT, 0)

        def LBRACE(self):
            return self.getToken(MiniGoParser.LBRACE, 0)

        def data_struct(self):
            return self.getTypedRuleContext(MiniGoParser.Data_structContext,0)


        def RBRACE(self):
            return self.getToken(MiniGoParser.RBRACE, 0)

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_declaration




    def struct_declaration(self):

        localctx = MiniGoParser.Struct_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_struct_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(MiniGoParser.TYPE)
            self.state = 187
            self.match(MiniGoParser.ID)
            self.state = 188
            self.match(MiniGoParser.STRUCT)
            self.state = 189
            self.match(MiniGoParser.LBRACE)
            self.state = 190
            self.data_struct()
            self.state = 191
            self.match(MiniGoParser.RBRACE)

            self.state = 192
            self.match(MiniGoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_structContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_struct(self):
            return self.getTypedRuleContext(MiniGoParser.Data_structContext,0)


        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def data_type(self):
            return self.getTypedRuleContext(MiniGoParser.Data_typeContext,0)


        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_data_struct




    def data_struct(self):
